// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mantra.render Initial and no height still shows 1`] = `
<View
  onLayout={null}
  style={Object {}}
>
  <AnimatedComponent
    style={
      Object {
        "overflow": "hidden",
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "backgroundColor": "white",
            "borderBottomWidth": 1,
            "borderColor": "#e2e2e2",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingBottom": 20,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 20,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "flex": 1,
                "fontSize": 20,
              }
            }
          >
            Hello I am Mantra
          </Text>
        </View>
      </View>
    </TouchableOpacity>
  </AnimatedComponent>
</View>
`;

exports[`Mantra.render Renders correctly with default params 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "opacity": 0,
      "position": "absolute",
    }
  }
>
  <AnimatedComponent
    style={
      Object {
        "overflow": "hidden",
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "backgroundColor": "white",
            "borderBottomWidth": 1,
            "borderColor": "#e2e2e2",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingBottom": 20,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 20,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "flex": 1,
                "fontSize": 20,
              }
            }
          >
            Hello I am Mantra
          </Text>
        </View>
      </View>
    </TouchableOpacity>
  </AnimatedComponent>
</View>
`;

exports[`Mantra.render Show default sync icon 1`] = `
<View
  onLayout={null}
  style={Object {}}
>
  <AnimatedComponent
    style={
      Object {
        "overflow": "hidden",
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "backgroundColor": "white",
            "borderBottomWidth": 1,
            "borderColor": "#e2e2e2",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingBottom": 20,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 20,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "flex": 1,
                "fontSize": 20,
              }
            }
          >
            Hello I am Mantra
          </Text>
          <AnimatedComponent
            style={
              Object {
                "height": 20,
                "opacity": Object {
                  "AnimatedMockOpacity": true,
                },
                "overflow": "hidden",
              }
            }
          >
            <Icon
              allowFontScaling={false}
              color="#828282"
              name="ios-sync"
              size={20}
            />
          </AnimatedComponent>
        </View>
      </View>
    </TouchableOpacity>
  </AnimatedComponent>
</View>
`;

exports[`Mantra.render Show sync icon syncing 1`] = `
<View
  onLayout={null}
  style={Object {}}
>
  <AnimatedComponent
    style={
      Object {
        "overflow": "hidden",
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "backgroundColor": "white",
            "borderBottomWidth": 1,
            "borderColor": "#e2e2e2",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingBottom": 20,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 20,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "flex": 1,
                "fontSize": 20,
              }
            }
          >
            Hello I am Mantra
          </Text>
          <AnimatedComponent
            style={
              Object {
                "height": 20,
                "opacity": Object {
                  "AnimatedMockOpacity": true,
                },
                "overflow": "hidden",
                "transform": Array [
                  Object {
                    "rotate": Object {
                      "AnimatedMockRotation": true,
                    },
                  },
                ],
              }
            }
          >
            <Icon
              allowFontScaling={false}
              color="#3596c6"
              name="ios-sync"
              size={20}
            />
          </AnimatedComponent>
        </View>
      </View>
    </TouchableOpacity>
  </AnimatedComponent>
</View>
`;

exports[`Mantra.render With a specific height 1`] = `
<View
  onLayout={null}
  style={Object {}}
>
  <AnimatedComponent
    style={
      Object {
        "height": 200,
        "overflow": "hidden",
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "backgroundColor": "white",
            "borderBottomWidth": 1,
            "borderColor": "#e2e2e2",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingBottom": 20,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 20,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "flex": 1,
                "fontSize": 20,
              }
            }
          >
            Hello I am Mantra
          </Text>
        </View>
      </View>
    </TouchableOpacity>
  </AnimatedComponent>
</View>
`;
